--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,22 @@
 		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
+	
+		<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
+		<!-- dupricted/not worked -->
+		<!-- 	<dependency>
+			    <groupId>javax.validation</groupId>
+			    <artifactId>validation-api</artifactId>
+			    <version>1.1.0.Final</version>
+			</dependency> -->
+			
+			<dependency>
+			 <groupId>org.springframework.boot</groupId>
+			 <artifactId>spring-boot-starter-validation</artifactId>
+			</dependency>
+		
+	
+	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
