--- a/pom.xml
+++ b/pom.xml
@@ -18,26 +18,39 @@
 		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
-	
+
 		<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
 		<!-- dupricted/not worked -->
-		<!-- 	<dependency>
-			    <groupId>javax.validation</groupId>
-			    <artifactId>validation-api</artifactId>
-			    <version>1.1.0.Final</version>
-			</dependency> -->
-			
-			<dependency>
-			 <groupId>org.springframework.boot</groupId>
-			 <artifactId>spring-boot-starter-validation</artifactId>
-			</dependency>
-		
-	
-	
+		<!-- <dependency> <groupId>javax.validation</groupId> <artifactId>validation-api</artifactId> 
+			<version>1.1.0.Final</version> </dependency> -->
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
@@ -48,6 +61,17 @@
 			<groupId>nz.net.ultraq.thymeleaf</groupId>
 			<artifactId>thymeleaf-layout-dialect</artifactId>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.thymeleaf.extras/thymeleaf-extras-springsecurity5 -->
+		<!-- on n a pas besoin d'ajouter cet dependence psk already add in thymeleaf 
+			dependency -->
+			
+		<dependency>
+		<groupId>org.thymeleaf.extras</groupId>
+		<artifactId>thymeleaf-extras-springsecurity5</artifactId>
+		<version>3.0.4.RELEASE</version>
+		</dependency>
+
 
 
 		<dependency>
@@ -87,14 +111,14 @@
 			<artifactId>bootstrap</artifactId>
 			<version>4.1.3</version>
 		</dependency>
-		
-				<!-- https://mvnrepository.com/artifact/org.webjars/jquery -->
+
+		<!-- https://mvnrepository.com/artifact/org.webjars/jquery -->
 		<dependency>
-		    <groupId>org.webjars</groupId>
-		    <artifactId>jquery</artifactId>
-		    <version>3.4.1</version>
+			<groupId>org.webjars</groupId>
+			<artifactId>jquery</artifactId>
+			<version>3.4.1</version>
 		</dependency>
-				
+
 
 	</dependencies>
 
